@@ -1,1 +1,2 @@
 DIST poltergeist-1.5.1.tar.gz 143603 SHA256 7bd9c9330da095d9ad4715c6f6f32207f7acf84543b7de4ed3eb344d2087bda1 SHA512 d424c6867c744231e09ec71a6129bac801b23cba57e98ddd8881fb8ad97eb70b11fbfbd1481f988d4a462064abd1fb7b30aa8c024f300666493da9c64421a12b WHIRLPOOL e62b15bc93745afe368390ad49ac3d20a81fd55ef6d925c58e12a2513a366d395800cc92cbf705a25a20c1dfe99fc41e3c7529d9981276e2bc0af82b9ea29836
+DIST poltergeist-1.6.0.tar.gz 147447 SHA256 6a62976b6c1364be817c87daf84830d50284e3d693d8c9155d74514755d86c29 SHA512 298af6798095d78cd662dd58231ababec4a3b9925dd7d45ebb9d28c1211a3838605ba5c2ed75033439dc28d7ef84060407495e87e2fe248b1965bd3f5ccd8250 WHIRLPOOL 162e4aa97da121dd392f333550032657a199ab27225b76ed05f2f0e04e9c2c2971932fb48117ecd72f144ba194ab35c317afca1041fedf066697368f8a3429df
