@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*poltergeist-1.6.0 (19 Jun 2015)
+
+  19 Jun 2015; Hans de Graaff <graaff@gentoo.org> +poltergeist-1.6.0.ebuild:
+  Version bump.
+
   19 Jun 2015; Hans de Graaff <graaff@gentoo.org> -poltergeist-1.4.1-r1.ebuild,
   -poltergeist-1.5.0.ebuild:
   Cleanup.
